--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import "tailwindcss";
+@plugin "daisyui";
+
+
+#map {
+  width: 100%;
+  height: 500px;
+}
